--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -10,7 +10,7 @@
         android:id="@+id/endBG"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#244573"
+        android:background="@drawable/bg_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -22,7 +22,7 @@
         android:id="@+id/endText"
         android:layout_width="589dp"
         android:layout_height="58dp"
-        android:text="Thank you for playing, ***"
+        android:text="Спасибо за игру, ***"
         android:textSize="50px"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/endAchievements"
