--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -10,12 +10,12 @@
         android:id="@+id/progressBG"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#244573" />
+        android:background="@drawable/bg_all" />
 
     <TextView
         android:id="@+id/progressText"
-        android:layout_width="325dp"
-        android:layout_height="54dp"
+        android:layout_width="1147dp"
+        android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="Hello, ***"
@@ -30,8 +30,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/progressAchievements"
         android:name="com.example.far_faraway.Achievements"
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_width="1168dp"
+        android:layout_height="362dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressAchievements"
-        app:layout_constraintVertical_bias="0.407" />
+        app:layout_constraintVertical_bias="0.692" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
