--- a/app/src/main/res/layout/fragment_acception.xml
+++ b/app/src/main/res/layout/fragment_acception.xml
@@ -10,7 +10,7 @@
         android:id="@+id/acceptBG"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/sibas_color_0"
+        android:background="@drawable/bg_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +19,7 @@
     <ImageButton
         android:id="@+id/acceptBtnYes"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/yes"
@@ -29,7 +29,7 @@
     <ImageButton
         android:id="@+id/acceptBtnNo"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/no"
@@ -44,7 +44,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="50px"
-        android:text="Is your friend ready to go forward?"
+        android:text="Ваш друг готов идти дальше?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
