--- a/app/src/main/res/layout/fragment_achievements.xml
+++ b/app/src/main/res/layout/fragment_achievements.xml
@@ -3,61 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="362dp"
     tools:context=".Achievements">
-
-    <TextView
-        android:id="@+id/achText"
-        android:layout_width="237dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="36dp"
-        android:gravity="center"
-        android:text="Achievements"
-        android:textSize="50px"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.example.far_faraway.Object
-        android:id="@+id/ach_1"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.305" />
-
-    <com.example.far_faraway.Object
-        android:id="@+id/ach_2"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.305" />
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_3"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_3_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.305" />
+        app:layout_constraintVertical_bias="0.111" />
+
+    <com.example.far_faraway.Object
+        android:id="@+id/ach_2"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_2_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.111" />
+
+    <com.example.far_faraway.Object
+        android:id="@+id/ach_1"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_1_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.111" />
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_4"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_4_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
@@ -67,9 +55,9 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_5"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_4_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
@@ -79,9 +67,9 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_6"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_6_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.406"
@@ -91,9 +79,9 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_7"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_7_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -103,9 +91,9 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_8"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_8_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.76"
@@ -115,9 +103,9 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/ach_9"
-        android:layout_width="90dp"
-        android:layout_height="110dp"
-        android:background="@drawable/pnc"
+        android:layout_width="350px"
+        android:layout_height="280px"
+        android:background="@drawable/ach_9_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.927"
