--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -30,7 +30,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/progressAchievements"
         android:name="com.example.far_faraway.Achievements"
-        android:layout_width="1168dp"
+        android:layout_width="match_parent"
         android:layout_height="362dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
